[project]
name = "comfyui-reactor-node-v2"
description = "The Fast and Simple Face Swap Extension Node for ComfyUI, based on ReActor SD-WebUI Face Swap Extension"
version = "0.0.1"
license = { file = "LICENSE" }
dependencies = ["insightface==0.7.3", "onnx>=1.14.0", "opencv-python>=4.7.0.72", "numpy", "segment_anything"]

[project.urls]
Repository = "https://github.com/sunshine-2-me/comfyui-reactor-node-v2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sunshine-2-me"
DisplayName = "comfyui-reactor-node-v2"
Icon = ""
